# copilot-pdf-exporter

./: .gitignore  README.md  export_copilot_pdfs.py  pyproject.toml  requirements.txt  setup.py
.github/workflows/: python-app.yml
copilot_pdf_exporter/: __main__.py
tests/: test_export_copilot_pdfs.py  test_install_and_cli.py
